Agregue el metodo para buscar los incidentes con mas frecuencias en las llamadas en el emergency_calls y lo llame al metodo en security  y el archivo pandas y el png del modelo

--- a/OracleConect.ipynb
+++ b/OracleConect.ipynb
@@ -2,18 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Program Files\\Oracle\\instantclient_19_22\n",
+      "/usr/lib/oracle/19.22/client64/lib/\n",
       "entering Establishment config\n",
       "finished config for Establishment\n",
       "entering Emergency Calls config\n",
-      "finished config for Emergency Calls\n"
+      "finished config for Emergency Calls\n",
+      "entering Establishment config\n",
+      "finished config for Establishment\n",
+      "entering Establishment config\n",
+      "finished config for Establishment\n",
+      "entering Establishment config\n",
+      "finished config for Establishment\n",
+      "starting\n",
+      "finished connection\n"
      ]
     }
    ],
@@ -23,9 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Lucía', 'Fernández', '35444223', 'Femenino', 28),\n",
+       " (2, 'Sofía', 'Martínez', '30234567', 'Femenino', 32),\n",
+       " (3, 'Alejandro', 'González', '25123456', 'Masculino', 45),\n",
+       " (4, 'María', 'López', '40123456', 'Femenino', 40),\n",
+       " (5, 'Juan', 'Rodríguez', '30123456', 'Masculino', 35)]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#get all reporters\n",
     "data = Security()\n",
@@ -75,6 +98,24 @@
     "em=data.get_emergency_call(est_id=2)\n",
     "em"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los incidentes con mayor frecuencia es el: Accidente\n"
+     ]
+    }
+   ],
+   "source": [
+    "MayorF=data.getMaxFrecuenceIncidents()\n",
+    "print(\"Los incidentes con mayor frecuencia es el:\",MayorF)"
+   ]
   }
  ],
  "metadata": {
@@ -93,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.17"
   }
  },
  "nbformat": 4,
