Actualizacion de nuevas consultas

--- a/OracleConect.ipynb
+++ b/OracleConect.ipynb
@@ -31,9 +31,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Todos los reportantes\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -53,7 +69,7 @@
     "#get all reporters\n",
     "data = Security()\n",
     "rp = data.get_reporters()\n",
-    "\n",
+    "print('Todos los reportantes')\n",
     "rp"
    ]
   },
@@ -63,6 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print('Todos las llamadas de emergencia')\n",
     "em = data.get_emergency_call()\n",
     "em"
    ]
@@ -73,6 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"La llamada de emergencia con id=1\")\n",
     "em= data.get_emergency_call(emc_id=1)\n",
     "em"
    ]
@@ -83,6 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"La llamada de emergencia con id del incidente=2\")\n",
+    "\n",
     "em=data.get_emergency_call(inc_id=2)\n",
     "em"
    ]
@@ -95,26 +115,64 @@
    },
    "outputs": [],
    "source": [
-    "em=data.get_emergency_call(est_id=2)\n",
+    "print(\"La llamada de emergencia con id=2\")\n",
+    "\n",
+    "em=data.get_emergency_call(emc_id=2)\n",
     "em"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MayorF=data.getMaxFrecuenceIncidents()\n",
+    "print(\"Los incidentes con mayor frecuencia es el:\",MayorF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lastname='González'\n",
+    "listName=data.get_emergency_calls_by_reporter_lastname(lastname)\n",
+    "if(len(listName)!=0):\n",
+    "    print(\"Busqueda de llamadas de emergencia realizada por\",lastname)\n",
+    "    print(listName)\n",
+    "else:\n",
+    "    print(\"No realizo ninguna llamada de emergencia\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Los incidentes con mayor frecuencia es el: Accidente\n"
+      "Llamadas de emergencia entre el rango de fechas desde: 2023-12-10 hasta: 2024-03-24\n",
+      "\n",
+      "(3, '3825783921', datetime.datetime(2024, 3, 23, 7, 32, 30), 'RP14', 'Accidente', 3)\n",
+      "(4, '3825346129', datetime.datetime(2023, 12, 10, 2, 14, 47), 'Sta. Rosa, San Miguel', 'Accidente', 3)\n"
      ]
     }
    ],
    "source": [
-    "MayorF=data.getMaxFrecuenceIncidents()\n",
-    "print(\"Los incidentes con mayor frecuencia es el:\",MayorF)"
+    "start_date = datetime.date(2023, 12, 10)\n",
+    "end_date = datetime.date(2024, 3, 24)\n",
+    "calls = data.get_emergency_calls_by_date_range(start_date, end_date)\n",
+    "if len(calls) != 0:\n",
+    "    print(\"Llamadas de emergencia entre el rango de fechas desde:\", start_date, \"hasta:\", end_date)\n",
+    "    print()\n",
+    "    for i in calls:\n",
+    "        print(i)\n",
+    "else:\n",
+    "    print(\"Llamadas de emergencia entre el rango de fechas desde:\", start_date, \"hasta:\", end_date, \"no existen\")\n"
    ]
   }
  ],
