modificacion del README.md

--- a/ConectionYpandas.ipynb
+++ b/ConectionYpandas.ipynb
@@ -2,10 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "aa77f43b",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Program Files\\Oracle\\instantclient_19_22\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -27,12 +34,12 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>REP_ID</th>\n",
-       "      <th>REP_FIRST_NAME</th>\n",
-       "      <th>REP_LAST_NAME</th>\n",
-       "      <th>REP_DNI</th>\n",
-       "      <th>REP_GENDER</th>\n",
-       "      <th>REP_AGE</th>\n",
+       "      <th>rep_id</th>\n",
+       "      <th>rep_first_name</th>\n",
+       "      <th>rep_last_name</th>\n",
+       "      <th>rep_dni</th>\n",
+       "      <th>rep_gender</th>\n",
+       "      <th>rep_age</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -86,7 +93,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   REP_ID REP_FIRST_NAME REP_LAST_NAME   REP_DNI REP_GENDER  REP_AGE\n",
+       "   rep_id rep_first_name rep_last_name   rep_dni rep_gender  rep_age\n",
        "0       1          Lucía     Fernández  35444223   Femenino       28\n",
        "1       2          Sofía      Martínez  30234567   Femenino       32\n",
        "2       3      Alejandro      González  25123456  Masculino       45\n",
@@ -94,19 +101,18 @@
        "4       5           Juan     Rodríguez  30123456  Masculino       35"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas \n",
-    "import cx_Oracle\n",
-    "cs='''(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.sa-santiago-1.oraclecloud.com))(connect_data=(service_name=g8eaa6adc0ccc36_basededatosii_high.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))'''\n",
-    "connection=cx_Oracle.connect(\n",
-    "     user=\"seguridad\",\n",
-    "     password=\"StrongPassword123#\",\n",
-    "     dsn=cs)\n",
+    "from sqlalchemy import create_engine\n",
+    "from config_vars import BBDD_CONNECTION\n",
+    "\n",
+    "engine = create_engine(BBDD_CONNECTION)\n",
+    "connection = engine.connect()\n",
     "\n",
     "sql1 = \"select * from seguridad.reporters\"\n",
     "dataset = pandas.read_sql(sql1 , connection)\n",
@@ -117,11 +123,8 @@
     "sql3 = \"select * from seguridad.establishment\"\n",
     "dataset3 = pandas.read_sql(sql3 , connection)\n",
     "\n",
-    "\n",
     "sql4 = \"select * from seguridad.incidents\"\n",
     "dataset4 = pandas.read_sql(sql4 , connection)\n",
-    "\n",
-    "\n",
     "\n",
     "connection.close()\n",
     "\n",
@@ -130,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "3087eb21",
    "metadata": {},
    "outputs": [
@@ -155,12 +158,12 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>EMC_ID</th>\n",
-       "      <th>EMC_PHONE_NUMBER</th>\n",
-       "      <th>EMC_DATE</th>\n",
-       "      <th>EMC_ADDRESS</th>\n",
-       "      <th>EMC_DETAILS</th>\n",
-       "      <th>INC_ID</th>\n",
+       "      <th>emc_id</th>\n",
+       "      <th>emc_phone_number</th>\n",
+       "      <th>emc_date</th>\n",
+       "      <th>emc_address</th>\n",
+       "      <th>emc_details</th>\n",
+       "      <th>inc_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -214,14 +217,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   EMC_ID EMC_PHONE_NUMBER            EMC_DATE            EMC_ADDRESS  \\\n",
+       "   emc_id emc_phone_number            emc_date            emc_address  \\\n",
        "0       1       3822340958 2024-05-04 12:30:45           Catamarca 60   \n",
        "1       2       3825123940 2024-05-01 16:50:15   San Martín 10, F5360   \n",
        "2       3       3825783921 2024-03-23 07:32:30                   RP14   \n",
        "3       4       3825346129 2023-12-10 02:14:47  Sta. Rosa, San Miguel   \n",
        "4       5       3825382792 2024-03-24 20:28:58      San Francisco 320   \n",
        "\n",
-       "  EMC_DETAILS  INC_ID  \n",
+       "  emc_details  inc_id  \n",
        "0        Robo       1  \n",
        "1  Disturbios       4  \n",
        "2   Accidente       3  \n",
@@ -229,7 +232,7 @@
        "4   Violencia       2  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "eb90ee47",
    "metadata": {},
    "outputs": [
@@ -265,12 +268,12 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>EST_ID</th>\n",
-       "      <th>EST_NAME</th>\n",
-       "      <th>EST_ADDRESS</th>\n",
-       "      <th>EST_PHONE_NUMBER</th>\n",
-       "      <th>EST_LOCALITY</th>\n",
-       "      <th>POLICE_CENTER_ID</th>\n",
+       "      <th>est_id</th>\n",
+       "      <th>est_name</th>\n",
+       "      <th>est_address</th>\n",
+       "      <th>est_phone_number</th>\n",
+       "      <th>est_locality</th>\n",
+       "      <th>police_center_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -324,21 +327,21 @@
        "</div>"
       ],
       "text/plain": [
-       "   EST_ID                              EST_NAME  \\\n",
+       "   est_id                              est_name  \\\n",
        "0       1  Policía Unidad Regional II Chilecito   \n",
        "1       2     Destacamento Policial La Puntilla   \n",
        "2       3             Policía Accidentes Viales   \n",
        "3       4        Comisaría del Menor y la Mujer   \n",
        "4       5             Puesto Policial Chilecito   \n",
        "\n",
-       "                         EST_ADDRESS EST_PHONE_NUMBER EST_LOCALITY  \\\n",
+       "                         est_address est_phone_number est_locality  \\\n",
        "0            Av. Pelagio B. Luna 642      03825422404    Chilecito   \n",
        "1     Av. Primera Junta, La Puntilla      03825412684    Chilecito   \n",
        "2                 Av. Circunvalación      03825871249    Chilecito   \n",
        "3  Av. Pres. Illia,Hipolito Irigoyen      03825429692    Chilecito   \n",
        "4                               RN40      03825452010    Chilecito   \n",
        "\n",
-       "   POLICE_CENTER_ID  \n",
+       "   police_center_id  \n",
        "0               NaN  \n",
        "1               1.0  \n",
        "2               1.0  \n",
@@ -346,7 +349,7 @@
        "4               1.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "b23cb983",
    "metadata": {},
    "outputs": [
@@ -382,9 +385,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>INC_ID</th>\n",
-       "      <th>INC_INCIDENT_TYPE</th>\n",
-       "      <th>INC_DETAILS</th>\n",
+       "      <th>inc_id</th>\n",
+       "      <th>inc_incident_type</th>\n",
+       "      <th>inc_details</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -423,14 +426,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   INC_ID            INC_INCIDENT_TYPE  \\\n",
+       "   inc_id            inc_incident_type  \\\n",
        "0       1                      Delitos   \n",
        "1       2                    Violencia   \n",
        "2       3  Accidente de seguridad vial   \n",
        "3       4                   Disturbios   \n",
        "4       5    Arma utilizada o avistada   \n",
        "\n",
-       "                                         INC_DETAILS  \n",
+       "                                         inc_details  \n",
        "0  Incidentes con motivación delictiva que afecta...  \n",
        "1                                Golpes en el cuerpo  \n",
        "2             Cualquier accidente de seguridad vial   \n",
@@ -438,7 +441,7 @@
        "4  Avistamiento de arma utilizada o en posesión d...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,15 +452,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "be3d6288",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El promedio de edad de reportantes es de  36.0\n"
+     "ename": "NameError",
+     "evalue": "name 'dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_7612\\1867234933.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"El promedio de edad de reportantes es de \"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'REP_AGE'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'dataset' is not defined"
      ]
     }
    ],
@@ -483,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.17"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
